--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,8 @@
 
 
 <%= render 'items/list' , items: @items %>
+
+<% content_for :title do %>
+  <title><%= @user.name %>-monolist</title>
+  <meta name="description" content="<%= @user.name %>のモノページ。<%= @user.name %>の欲しいモノ、持っているモノを表示しています。" >
+<% end %>
