--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <% if content_for?(:head) %>
-    <%= yield :head %>
+  <% if content_for(:title) %>
+    <%= yield :title %>
   <% else %>
     <title>Monolist</title>
   <% end %>
