--- a/app/views/ranking/ranking.html.erb
+++ b/app/views/ranking/ranking.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="ranking">
   <div class="page-title">
     <h1><%= @title %></h1>
   </div>
@@ -23,6 +23,7 @@
           </p>
         </div>
         <%= render 'items/action' , item: item if logged_in? %>
+        
       </div>
     <% end %>
   </div>
